--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         * {
             box-sizing: border-box;
         }
-        div {
+        /* div {
             width: 300px;
             height: 300px;
             margin: 0 auto;
@@ -15,8 +15,8 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-        }
-        .score {
+        } */
+        /* .score {
             display: flex;
             align-items: center;
             justify-content: center;
@@ -26,11 +26,36 @@
             font-size: 24px;
             font-weight: bold;
             border: 1px solid #333;
+        } */
+        .container {
+            width: 50%;
+            height: 800px;
+            display:flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            margin: 0 auto;
+        }
+        .box {
+            display: flex;
+        }
+        span {
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            width: 30px;
+            height: 30px;
+            margin: 2px;
+            border: 1px solid #ccc;
+            background-color: lightblue;
         }
     </style>
 </head>
 <body>
     
-    <script src="./src/problem4_grade.js"></script>
+    <!-- <script src="./src/problem4_grade.js"></script> -->
+    <div class="container">
+        <script src="./src/problem5_printnum.js"></script>
+    </div>
 </body>
 </html>
